unpackaged/main/default/objects/Order__c/fields/Excluded_From_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Excluded_From_Allocation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when this sleeve was an exception sleeve at the moment the request was filed: its dollars were taken off the Expected Account Value before the other sleeves&#39; target weights were calculated, so it is not part of the model. Stamped by TradeInstructionController.saveTradeInstructions from the strategy&#39;s Sleeve Basis Rule (Excluded_From_Allocation__c), exactly as Funding Basis is stamped, and never re-derived afterwards — reclassifying a strategy must not change what a historical ticket&#39;s weights meant. Read Order Ticket.Allocation Base for the figure those weights were a share of.</description>
    <label>Excluded From Allocation</label>
    <type>Checkbox</type>
</CustomField>