unpackaged/main/default/objects/Order__c/fields/Funding_Basis__c.field-meta.xml
<CustomField>
    <fullName>Funding_Basis__c</fullName>
    <description>How the advisor expressed this sleeve&#39;s allocation. Dollar sleeves are fixed carve-outs that should not float with account value. Percent sleeves describe the actively traded remainder after all Dollar sleeves on the same Order Ticket and must total 100% across the ticket. Blank on rows created before this field existed (treat as Percent of total, the legacy convention).</description>
    <inlineHelpText>Dollar = fixed amount that does not float with account value. Percent = share of the remainder after fixed-dollar sleeves.</inlineHelpText>
    <label>Funding Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Dollar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>