unpackaged/main/default/objects/Order__c/fields/Order_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Order_Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Ticket</label>
    <referenceTo>Order_Ticket__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>