unpackaged/main/default/objects/Order__c/fields/Share_Price__c.field-meta.xml
<CustomField>
    <fullName>Share_Price__c</fullName>
    <label>Share Price</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>