unpackaged/main/default/objects/Order__c/fields/Share_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Share_Quantity__c</fullName>
    <label>Share Quantity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>