unpackaged/main/default/objects/Order__c/fields/Strategy__c.field-meta.xml
<CustomField>
    <fullName>Strategy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Strategy</label>
    <referenceTo>Strategy__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>